AWSEDU-3: Fix typo

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <div class="container">
 
         <header class="section-header wow fadeInUp">
-          <h3>Services</h3>
+          <h3>Training Services</h3>
           <p>Amazon Web Services (AWS) provides a broad set of products and services you can use as building blocks to run sophisticated and scalable applications. Running your applications in the AWS Cloud can help you move faster, operate more securely, and save substantial costs; all while benefitting from the scale and performance of the cloud.</p>
         </header>
 
