--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Product</a></li>
-          <li><a href="#team">Team</a></li>
+          <!--<li><a href="#portfolio">Product</a></li>
+          <li><a href="#team">Team</a></li>-->
           <li class="menu-has-children"><a href="">AWS Certifications</a>
             <ul>
               <li><a href="#">AWS Certified Cloud Practitioner</a></li>
